# customerchurn_predictionmodel

./: .gitignore  README.md  mlflow.db  pyproject.toml
data/raw/: churn.csv.dvc
mlruns/1/models/m-3efacb573ce04496bee2d07a997b780b/artifacts/: MLmodel  conda.yaml  model.pkl
mlruns/1/models/m-47a0132fa2114ba9ae7f99e83289cbfe/artifacts/: MLmodel
mlruns/1/models/m-e14b686b68b8490a8af1687aa4afbbed/artifacts/: MLmodel  model.pkl
models/: staging_model.joblib
src/: data.py  feature.py  logger.py  promote.py  run_pipeline.py  train.py  validate.py
src/config/: config.yaml
