[project]
name = "customerchurn-predictionmodel"
version = "1.0.0"
description = "Bank Customer Churn Prediction Model using Machine Learning Technique.."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.65.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "numpy>=2.4.0",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.40.0",
]
